# qttest

./: CMakeLists.txt  main.cpp  window.cpp  window.h
